# estoa

./: .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: release-plz.yml
crates/arbitrary/: Cargo.toml
crates/arbitrary/src/: lib.rs
crates/arbitrary/tests/: test_arbitrary.rs
crates/cli/: Cargo.toml
crates/codec/: Cargo.toml
crates/crdts/: Cargo.toml
crates/proptest/: Cargo.toml  README.md
crates/proptest-macros/: Cargo.toml
crates/proptest-macros/src/: lib.rs
crates/proptest-macros/tests/: ui.rs
crates/proptest-macros/tests/ui/: cases_zero.rs  cases_zero.stderr  duplicate_keys.rs  duplicate_keys.stderr  recursion_limit_zero.rs  recursion_limit_zero.stderr  rejection_limit_zero.rs  rejection_limit_zero.stderr  unknown_key.rs  unknown_key.stderr
crates/proptest/src/: arbitrary.rs  lib.rs
crates/proptest/src/strategies/: collections.rs  generator.rs  mod.rs  size_hint.rs
crates/proptest/src/strategy/: mod.rs  runtime.rs  size_hint.rs  traits.rs
crates/proptest/src/strategy/collections/: btree.rs  btree_map.rs  btree_set.rs  hash.rs  hash_map.rs  hash_set.rs  mod.rs  vecs.rs
crates/proptest/tests/: test_arbitrary.rs  test_arbitrary_heap.rs  test_chars.rs  test_collections_btree.rs  test_collections_hashmap.rs  test_collections_hashset.rs  test_collections_string.rs  test_collections_vec.rs  test_floats.rs  test_integers_isize.rs  test_proptest_macro.rs  test_runtime_depth.rs  test_size_hint.rs  test_strategies.rs  test_strategy_integration.rs
crates/storage/: Cargo.toml
(+10 files in other folders)
