[package]
name = "estoa-proptest-macros"
description = "Macros for the estoa-proptest-crate"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"
